<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- authorisation strings -->

	<string name="app_name">ScenariW</string>
	<string name="ek_img_content">ExportKit Image</string>
	<string name="login_string">Login</string>
	<string name="Welcome_string">Welcome!\nSign in or sign up to continue.</string>
	<string name="Welcome1_string">Log in or log up to continue.</string>
	<string name="forgot">Forgot your password?</string>

	<string name="registration_string">Enter your login</string>
	<string name="registration_string_pass">Enter your password</string>
	<string name="email">Enter your email</string>
	<string name="email_string">Email</string>
	<string name="birthday">Enter your birthday</string>
	<string name="birthday_string">Birthday</string>
	<string name="age">Your age is: </string>

	<string name="back">Back</string>
	<string name="logOut">Log out</string>
	<string name="btnUpdatePass">Update password</string>
	<string name="nameLogOrEmail">Enter login or email</string>
	<string name="nameNewPass">Enter new password</string>
	<string name="stringLogOrEmail">Login/Email</string>
	<string name="userName">Username</string>

	<string name="btnSignUp">Sign Up</string>
	<string name="toLogIn">I have an account</string>

	<string name="Password_string">Password</string>
	<string name="AppName_string">ScenariW</string>
	<string name="Reg_string"><u>Registration</u></string>
	<string name="ivan293_string">Ivan293</string>
	<string name="_________string">*******</string>
	<string name="Enter_string">Log in</string>

	<string name="Scenarious_string">Scenarious</string>
	<string name="UserInfo_string">User Info</string>
	<string name="Help_string">Help</string>
	<string name="MainText_string">What are we doing today?</string>

	<string name="WinScenarious">Scenarious</string>
	<string name="Name">Name</string>
	<string name="Type">Type</string>
	<string name="Nothings">You have no any scenarious. Wanna create?</string>
	<string name="Create">Create</string>
	<string name="Return">Return</string>


	<string name="Create1">Create new</string>
	<string name="PN_create1">Creating new scenario</string>
	<string name="Create1Other">Add other scenario or create yours?</string>
	<string name="LinkEn">Enter your link</string>
	<string name="CreateWLink">Create with link</string>

	<string name="Create2Other">Select a type and your role</string>
	<string name="Select">Select</string>
	<string name="Role">Role</string>
	<string name="open">Open</string>
	<string name="deleteThis">Delete</string>
	<string name="deleteAll">Delete all</string>

	<string name="ChooseView">Choose view</string>
	<string name="SceneName">Scene</string>
	<string name="DescriptionName">Description</string>
	<string name="InFuture">Will be in the future</string>
    <string name="next">Next</string>
	<string name="assist1">Add a new row before the start!</string>
	<string name="assist2">Good job! Set some text and add a new row again...</string>
	<string name="assist3">Dont forget to add a new rows! In case of deleting too.</string>
	<string name="categoryAssist">Age category for now: </string>

	<string name="Story">Story</string>
	<string name="Dialogue">Dialogue</string>
	<string name="Quest">Quest</string>

	<string name="Designer">Designer</string>
	<string name="Scenarist">Scenarist</string>
	<string name="Programmer">Programmer</string>
	<string name="SoundEngineer">Sound Engineer</string>


	<string name="FZ">Текст ФЗ №436 от 29.12.2010: <a href="https://normativ.kontur.ru/document?moduleId=1&amp;documentId=441004#h154">Открыть</a></string>

</resources>