<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		authorisation
	 *	@date 		Monday 25th of March 2024 09:59:09 AM
	 *	@title 		Page 1
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/registration"
		android:layout_width="wrap_content"
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container"
			android:layout_width="wrap_content"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="1.9dp"
			android:layout_height="wrap_content"
			android:gravity="center"
			>




			<RelativeLayout android:id="@+id/page_authorisation_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerHorizontal="true"
				>

				<View
					android:id="@+id/_bg__authorisation_ek2"
					android:layout_width="380dp"
					android:layout_height="790dp"
					android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:background="@drawable/_bg__authorisation_ek2_shape" />



				<ImageView android:id="@+id/shape_with_text"
					android:src="@drawable/shape_with_text"
					android:contentDescription="shape_with_text"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_centerHorizontal="true"
					android:layout_width="380dp"
					android:layout_height="790dp" />


				<TextView
					android:layout_width="378.4dp"
					android:layout_height="69.4dp"
					android:layout_centerHorizontal="true"
					android:layout_marginStart="19dp"
					android:layout_marginTop="58dp"

					android:gravity="center"
					android:text="@string/registration_string"
					android:textColor="#9b63bf"
					android:textSize="10pt"

					/>

				<ImageView
					android:layout_width="337dp"
					android:layout_height="35dp"
					android:layout_centerHorizontal="true"
					android:layout_marginStart="19dp"
					android:layout_marginTop="120dp"
					android:background="@drawable/roundstyle"
					android:backgroundTint="@color/ccc"
					android:contentDescription="shape_with_text_ek1"
					android:gravity="center" />

				<EditText
					android:id="@+id/login"
					android:layout_width="300dp"
					android:layout_height="39dp"
					android:layout_marginLeft="0dp"
					android:layout_marginTop="120dp"
					android:hint="@string/login_string"

					android:gravity="center"
					android:layout_centerHorizontal="true"

					/>

				<TextView
					android:layout_width="378.4dp"
					android:layout_height="69.4dp"
					android:layout_centerHorizontal="true"
					android:layout_marginStart="19dp"
					android:layout_marginTop="178dp"

					android:gravity="center"
					android:text="@string/registration_string_pass"
					android:textColor="#9b63bf"
					android:textSize="10pt"

					/>

				<ImageView
					android:layout_width="337dp"
					android:layout_height="35dp"
					android:layout_centerHorizontal="true"
					android:layout_marginStart="19dp"
					android:layout_marginTop="240dp"
					android:background="@drawable/roundstyle"
					android:backgroundTint="@color/ccc"
					android:contentDescription="shape_with_text_ek1"
					android:gravity="center" />

				<EditText
					android:id="@+id/password"
					android:layout_width="300dp"
					android:layout_height="39dp"
					android:layout_marginLeft="0dp"
					android:layout_marginTop="240dp"
					android:hint="@string/Password_string"

					android:gravity="center"
					android:layout_centerHorizontal="true"

					/>

				<TextView
					android:layout_width="378.4dp"
					android:layout_height="69.4dp"
					android:layout_centerHorizontal="true"
					android:layout_marginStart="19dp"
					android:layout_marginTop="298dp"

					android:gravity="center"
					android:text="@string/email"
					android:textColor="#9b63bf"
					android:textSize="10pt"

					/>

				<ImageView
					android:layout_width="337dp"
					android:layout_height="35dp"
					android:layout_centerHorizontal="true"
					android:layout_marginStart="19dp"
					android:layout_marginTop="360dp"
					android:background="@drawable/roundstyle"
					android:backgroundTint="@color/ccc"
					android:contentDescription="shape_with_text_ek1"
					android:gravity="center" />



				<EditText
					android:id="@+id/editTextTextEmailAddress"
					android:layout_width="300dp"
					android:layout_height="39dp"
					android:layout_marginLeft="0dp"
					android:layout_marginTop="360dp"
					android:hint="@string/email_string"

					android:gravity="center"
					android:layout_centerHorizontal="true"

					android:ems="10"
					android:inputType="textEmailAddress" />


				<TextView
					android:layout_width="378.4dp"
					android:layout_height="69.4dp"
					android:layout_centerHorizontal="true"
					android:layout_marginStart="19dp"
					android:layout_marginTop="418dp"

					android:gravity="center"
					android:text="@string/birthday"
					android:textColor="#9b63bf"
					android:textSize="10pt"

					/>

				<ImageView
					android:layout_width="337dp"
					android:layout_height="35dp"
					android:layout_centerHorizontal="true"
					android:layout_marginStart="19dp"
					android:layout_marginTop="480dp"
					android:background="@drawable/roundstyle"
					android:backgroundTint="@color/ccc"
					android:contentDescription="shape_with_text_ek1"
					android:gravity="center" />

				<EditText
					android:id="@+id/editTextDate"
					android:layout_width="300dp"
					android:layout_height="39dp"
					android:layout_marginLeft="0dp"
					android:layout_marginTop="480dp"
					android:hint="@string/birthday_string"

					android:gravity="center"
					android:layout_centerHorizontal="true"

					android:ems="10"
					android:inputType="date" />
				<!-- aaaaaaaaaaaaaaaaaaaaaaaa -->


				<RelativeLayout android:id="@+id/frame_5"
					android:layout_marginTop="568dp"
					android:layout_marginStart="43dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_centerHorizontal="true"
					>


					<Button
						android:id="@+id/btnSignUp"
						android:layout_width="289dp"
						android:layout_height="87dp"
						android:layout_centerHorizontal="true"

						android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:background="@drawable/roundstyle2"
						android:backgroundTint="#9b63bf"
						android:gravity="center"
						android:onClick="startNewActivity"

						android:text="@string/btnSignUp"
						android:textAlignment="center"
						android:textColor="@color/white" />

				</RelativeLayout>


				<TextView
					android:id="@+id/__________________"
					android:layout_width="200dp"
					android:layout_height="25.4dp"
					android:layout_centerHorizontal="true"
					android:layout_marginLeft="113dp"
					android:layout_marginTop="668dp"
					android:gravity="center"
					android:text="@string/toLogIn"
					android:textColor="#9b63bf"
					android:textSize="14sp"

					/>

				<TextView
					android:id="@+id/___________________"
					android:layout_width="277.4dp"
					android:layout_height="44.4dp"
					android:layout_centerHorizontal="true"
					android:layout_marginLeft="59dp"
					android:layout_marginTop="9dp"
					android:gravity="center"
					android:text="@string/AppName_string"
					android:textColor="@color/purple_700"
					android:textSize="24sp" />



				<!--
				<TextView
					android:id="@+id/ivan293"
					android:layout_width="68.4dp"
					android:layout_height="26.4dp"
					android:layout_marginLeft="160dp"
					android:layout_marginTop="434dp"
					android:text="@string/ivan293_string"
					android:gravity="center"
					android:layout_centerHorizontal="true"

					android:textColor="@color/___________________________________________________________________color"
					android:textSize="14sp" />
					-->


				<!--
                <TextView android:id="@+id/________"
					android:textSize="14sp"
					android:textColor="@color/___________________________________________________________________color"
					android:layout_marginLeft="162dp"
					android:layout_marginTop="504dp"
					android:layout_width="64.4dp"
					android:layout_height="25.4dp"
					android:gravity="center"
					android:layout_centerHorizontal="true"
					android:text="@string/_________string"
					 />
					 -->

			</RelativeLayout>
		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>