<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">

	<RelativeLayout android:id="@+id/frame_3"
		android:layout_width="wrap_content"
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container"
            android:layout_width="395dp"
			android:layout_height="790dp"
            android:layout_marginTop="10dp"
			android:layout_marginLeft="10dp"
			android:layout_centerHorizontal="true">

			<RelativeLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>

			<TextView
                android:id="@+id/___________________"
                android:layout_width="350dp"
                android:layout_height="75dp"
				android:layout_centerHorizontal="true"
				android:layout_marginLeft="59dp"
                android:layout_marginTop="-10dp"
				android:gravity="center"
                android:text="Программное решение для разработки сценариев
компьютерных игр"
				android:textColor="@color/purple_700"
				android:textSize="16sp" />

			<ImageView
				android:id="@+id/shape_with_text_ek3"
				android:layout_width="337dp"
				android:layout_height="245dp"
				android:layout_centerHorizontal="true"
				android:layout_marginStart="19dp"
				android:layout_marginTop="58dp"
				android:background="@drawable/roundstyle2"
				android:contentDescription="shape_with_text_ek3"
				android:src="@drawable/shape_with_text_ek3" />

			<ImageView android:id="@+id/shape_with_text_ek4"
				android:background="@drawable/log"
				android:backgroundTint="@color/white"
				android:contentDescription="shape_with_text_ek4"
				android:layout_centerHorizontal="true"
				android:layout_marginStart="79dp"
				android:layout_marginTop="66dp"
				android:layout_width="218dp"
				android:layout_height="212dp" />

			<TextView
				android:id="@+id/textView"
				android:layout_width="350dp"
				android:layout_height="40sp"
				android:layout_alignBaseline="@id/shape_with_text_ek3"
				android:layout_centerHorizontal="true"
				android:layout_margin="330dp"
				android:gravity="center"
				android:text="@string/MainText_string"
				android:textColor="#9b63bf"
				android:textSize="10pt" />

			<LinearLayout
				android:layout_width="380dp"
				android:layout_height="300dp"
				android:layout_marginTop="300dp"
				android:gravity="center"

				android:divider="@drawable/divider"
				android:showDividers="middle">

				<Button
					android:id="@+id/Scenarious"
					android:layout_width="100dp"
					android:layout_height="100dp"
					android:background="@drawable/roundstyle2"
					android:contentDescription="shape_with_text_ek3"
					android:onClick="toScenarious"
					android:text="@string/Scenarious_string"
					android:textColor="@color/white" />

				<Button
					android:id="@+id/UserInfo"
					android:layout_width="100dp"
					android:layout_height="100dp"
					android:background="@drawable/roundstyle"
					android:backgroundTint="#9b63bf"
					android:contentDescription="shape_with_text_ek3"
					android:src="@drawable/brush"

					android:text="@string/UserInfo_string"
					android:textColor="@color/white" />


				<Button
					android:id="@+id/info"
					android:layout_width="100dp"
					android:layout_height="100dp"
					android:background="@drawable/roundstyle2"
					android:contentDescription="shape_with_text_ek3"
					android:src="@drawable/shape_with_text_ek3"
					android:text="@string/Help_string"
					android:textColor="@color/white" />
				/>

			</LinearLayout>

			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="294dp"
				android:layout_marginTop="550dp"

				>

				<ImageView
					android:id="@+id/imageView2"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:src="@drawable/playing_video_game_character" />

			</RelativeLayout>


		</RelativeLayout>

	</RelativeLayout>
</RelativeLayout>